# Flow-State

./: .env.example  .gitignore  CLAUDE.md  README.md  data_pipeline.md  example-config.yaml  main.py  pyproject.toml  velocity_tracker.py  weekly-summary.py
script/clickup_example/: clickup_example.py  test_async_client.py  test_validation.py  use_async_client.py
script/clickup_script/: clickup_example.py
script/graph_script/: data_import.py  enhanced_verify.py  graph_explorer.py
script/neo4j_example.py/: run_neo4j_test.py
script/webhook_server/: ngrok_server.py  run_ngrok.py  setup_clickup_webhook.py
src/: __init__.py
src/bot/: __init__.py  discord_bot.py
src/graph/: create_graph.py  neo4j_client.py
src/graph/operations/: __init__.py  importer.py  user_queries.py  weekly_snapshot.py
src/graph/schema/: node.txt  relationship.txt  sample_structure.txt  snapshots.cypher
src/graph/schema/base/: constraints.cypher  nodes.cypher  relationships.cypher
src/graph/schema/investic/: tech_space.cypher
src/integrations/: __init__.py  clickup_client.py
src/integrations/clickup/: __init__.py  client.py
src/integrations/neo4j/: __init__.py  client.py
src/tools/: __init__.py  neo4j_test.py
src/utils/: config.py  logger.py  ngrok_manager.py
src/webhooks/: MULTI_PROVIDER_WEBHOOKS.md  __init__.py
src/webhooks/core/: __init__.py  registry.py  router.py  webhook_server.py
src/webhooks/providers/: __init__.py
src/webhooks/providers/clickup/: WEBHOOK_SETUP.md  (+4 more)
src/webhooks/shared/: __init__.py  base_models.py  exceptions.py  security.py  validators.py
